# vagrant

./: .clippy.toml  .envrc  .gitignore  .typos.toml  CHANGES.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  TODO.md  commit.sh  release.sh
.github/ISSUE_TEMPLATE/: add-channel.yml  add.yml  fix.yml
p/: ALL  ALL.json  ALL.txt
p/7zip/: config  versions.json  versions.txt
p/abseil-cpp/: commit  config  versions.json  versions.txt
p/acl/: commit  config  versions.json  versions.txt
p/alacritty/: commit  config  versions.json  versions.txt
p/alsa-lib/: commit  config  versions.json  versions.txt
p/alsa-plugins/: config  versions.json  versions.txt
p/alsa-ucm-conf/: config  versions.json  versions.txt
p/alsa-utils/: commit  config  versions.json  versions.txt
p/ani-cli/: commit  config  versions.json  versions.txt
p/appstream/: commit  config  versions.json  versions.txt
p/appstream-glib/: config  versions.json  versions.txt
p/apr/: config  versions.json  versions.txt
p/apr-util/: config  versions.json  versions.txt
p/aquamarine/: commit  config  versions.json  versions.txt
p/aria2/: config  versions.json  versions.txt
p/aspell/: config  versions.json  versions.txt
p/at-spi2-core/: commit  config  versions.json  versions.txt
p/attr/: commit  config  versions.json  versions.txt
p/autoconf/: config  versions.json  versions.txt
p/autoconf-archive/: config  versions.json  versions.txt
p/automake/: config  versions.json  versions.txt
p/avahi/: commit  config  (+2 more)
sh/: dev-utils.env  lib.env  m  semversort
src/: args.rs  main.rs
(+2311 files in other folders)
