[package]
name = "vagrant"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
humantime = "2.2.0"
indexmap = "2.11.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
