[package]
name = "vagrant"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
humantime = "2.2"
indexmap = "2.11"
rand = "0.9"
regex = "1.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
